manifest/objects/SFMC__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryId__c</fullName>
        <label>CategoryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>CategoryName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_ContentDocumentTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable ContentDocumentTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndpointUrl__c</fullName>
        <label>EndpointUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LibraryId__c</fullName>
        <label>LibraryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_EndpointUrl__c</fullName>
        <label>Token_EndpointUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SFMC</label>
</CustomObject>